added custom font and applied it to hello.html page

--- a/desarrollo-web/tareas/html_cheat_sheet/public/html/hello.html
+++ b/desarrollo-web/tareas/html_cheat_sheet/public/html/hello.html
@@ -1,21 +1,14 @@
 <html>
     <head>
         <title>html cheat sheet</title>
-        <!-- <link href="https://fonts.cdnfonts.com/css/minecraft-3" rel="stylesheet"> -->
+        <link rel="stylesheet" href="../styles/styles.css">
         <style>
-            /* body {
-                font-family: 'Minecraft';
-                background-color: #f0f0f0;
-                color: #333;
-                margin: 20px;
-            } */
-
             hr {
                 border: none;
-                height: 1px;
-                color: #333; /* Background color of the hr */
+                height: 3px;
+                color: #333; 
                 background-color: #333;
-}
+            }
         </style>
     </head>
     <body>
@@ -27,7 +20,7 @@
             <p> anchor tags are used to create a hyperlink on a website, either to an external page or to a page within the server its running on (like this one!) </p>
             <p> <a href="https://www.google.com">this is a hyperlink to google, for example</a> </p>
         </div>
-<br>
+<hr>
         <div>
             <h3>&lt;p&gt; - paragraphs</h3>
             <p> paragraph tags are used to create paragraphs on a website. </p>
@@ -56,7 +49,7 @@
         <div>
             <h3>&lt;span style="{styles}"&gt; &lt;/span&gt; - spans</h3>
             <p> span tags are used to apply styles to a specific part of a text. </p>
-            <p> <span style="color: #189fd9;">for example, this text is blue.</span> </p>
+            <p> <span style="color: #7fd918;">for example, this text is green.</span> </p>
         </div>
 <br>
         <div>
@@ -152,7 +145,7 @@
             <h3>&lt;nav&gt; - navigation section</h3>
             <p> the nav tag is used to define a section of navigation links </p>
             <nav>
-                <a href="http://localhost:5000/pagina2.html">check out page 2 of this website!</a> |
+                <a href="http://localhost:3000/pagina2">check out page 2 of this website!</a> |
                 <a href="https://www.youtube.com/watch?v=mpYdDJd-mSY">or click this link that takes you to a totally normal youtube video!</a> |
                 <a href="https://github.com/cyb3rn3t">or check out my github while you're here :)</a>
             </nav>
