--- a/desarrollo-web/tareas/html_cheat_sheet/public/html/pagina2.html
+++ b/desarrollo-web/tareas/html_cheat_sheet/public/html/pagina2.html
@@ -1,8 +1,30 @@
 <html lang="en">
-<head></head>
-    <title>Pagina 2</title>
+<head>
+    <title> welcome, you made it! </title>
+    <link rel="stylesheet" href="../styles/styles.css">
+    <style>
+        .video{
+            margin-left: auto;
+            margin-right: auto;
+            display: block;}
+        .p{
+            display: block;
+            text-align: center;
+        }
+    </style>
+</head>
     <body>
-        <h1>Pagina 2</h1>
-        <p>Esta es la pagina 2</p>
-        <a href="index.php">Volver a la pagina 1</a>
+        <h1>welcome to the second page!</h1>
+        <p> congratulations! you made it. </p>
+        <p> uh, have this video as a reward. </p>
+        <iframe class="video" width="560"
+        height="315"
+        src="https://www.youtube.com/embed/mpYdDJd-mSY?si=Lgwx_DFSUfPl4nsV"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" 
+        allowfullscreen></iframe>
+          <br><br>
+        <a href="http://localhost:3000/" class="p">if you're done, you can go back to page 1</a>
 </html>
