minor changes to hyperlink in page 2

--- a/desarrollo-web/tareas/html_cheat_sheet/public/html/pagina2.html
+++ b/desarrollo-web/tareas/html_cheat_sheet/public/html/pagina2.html
@@ -26,5 +26,5 @@
         referrerpolicy="strict-origin-when-cross-origin" 
         allowfullscreen></iframe>
           <br><br>
-        <a href="http://localhost:3000/" class="p">if you're done, you can go back to page 1</a>
+        <a href="http://localhost:3000/" class="p">if you're done (which you hopefully will be before the video ends), you can go back to page 1</a>
 </html>
