minor chages to the contents of hello.html

--- a/desarrollo-web/tareas/html_cheat_sheet/public/html/hello.html
+++ b/desarrollo-web/tareas/html_cheat_sheet/public/html/hello.html
@@ -81,7 +81,7 @@
         <hr>
         <div>
             <h3>&lt;strike&gt; - strikethrough text</h3>
-            <p> the strike tag is used to strikethrough text </p>
+            <p> the strike tag is used to strikethrough text. doesn't have a semantic equivalent. </p>
             <p> <strike>this text has been strikethrough'd.</strike> </p>
         </div>
         <hr>
@@ -108,7 +108,8 @@
         <hr>
         <div>
             <h3>&lt;section&gt; - section</h3>
-            <p> the section tag is used to define a section in a document </p>
+            <p> the section tag is used to define a section in a document. </p>
+            <p> for good practice, all sections should have headers, but there are exceptions.</p>
             <section>
                 <h2>this is a section, for example.</h2>
                 <p>this is the content of the section.</p>
@@ -118,6 +119,7 @@
         <div>
             <h3>&lt;article&gt; - article</h3>
             <p> the article tag is used to define an independent, self-contained piece of content. </p>
+            <p> it can be reused in other parts of the website. </p>
             <article>
                 <h2>this is a header inside of an article.</h2>
                 <p>and this is the content of the article.</p>
@@ -126,15 +128,15 @@
         <hr>
         <div>
             <h3>&lt;aside&gt; - aside</h3>
-            <p> the aside tag is used to define content that is tangentially related to the main content </p>
+            <p> the aside tag is used to define content that is tangentially related to the main content. </p>
+            <p> in other words, it displays content aside from other content. like this:</p>
             <aside>
-                <h3>this is an aside, for example.</h3>
-                <p>this is the content of the aside.</p>
+                <p>it's not very obvious, but this is an aside.</p>
             </aside>
             <hr>
         <div>
             <h3>&lt;footer&gt; - footer section</h3>
-            <p> the footer tag is used to define a footer section of a document or a section </p>
+            <p> the footer tag is used to define a footer section of a document or a section. </p>
             <footer>
                 <p>this is a footer section WOO</p>
             </footer>
@@ -142,7 +144,7 @@
         <hr>
         <div>
             <h3>&lt;nav&gt; - navigation section</h3>
-            <p> the nav tag is used to define a section of navigation links </p>
+            <p> the nav tag is used to define a section of navigation links. </p>
             <nav>
                 <a href="http://localhost:3000/pagina2">check out page 2 of this website!</a> <br>
                 <a href="https://www.youtube.com/watch?v=mpYdDJd-mSY">or click this link that takes you to a totally normal youtube video!</a> <br>
@@ -200,7 +202,7 @@
         <hr>
         <div>
             <h3>&lt;table&gt; - table</h3>
-            <p> the table tag is used to create an HTML table </p>
+            <p> the table tag is used to create an HTML table, like so: </p>
             <table>
                 <tr>
                     <th>header 1</th>
@@ -215,21 +217,21 @@
         <hr>
         <div>
             <h3>&lt;ul&gt; - unordered list</h3>
-            <p> the ul tag is used to create an unordered list </p>
+            <p> the ul tag is used to create an unordered list, as such: </p>
             <ul>
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
+                <li>hello</li>
+                <li>i'm a list</li>
+                <li>:D</li>
             </ul>
         </div>
         <hr>
         <div>
             <h3>&lt;ol&gt; - ordered list</h3>
-            <p> the ol tag is used to create an ordered list </p>
+            <p> the ol tag is used to create an ordered list, like this one: </p>
             <ol>
-                <li>item 1</li>
-                <li>item 2</li>
-                <li>item 3</li>
+                <li>stop</li>
+                <li>drop</li>
+                <li>roll</li>
             </ol>
         </div>
         <hr>
