renamed html files for more appropiate identification, corrected routes on the api accordingly, added new .css file

--- a/desarrollo-web/tareas/html_cheat_sheet/public/html/html_cheat_sheet.html
+++ b/desarrollo-web/tareas/html_cheat_sheet/public/html/html_cheat_sheet.html
@@ -9,6 +9,10 @@
                 width: 90%;
                 margin: 0 auto; 
             }
+
+            #centered-link {
+                text-align: center;
+            }
         </style>
     </head>
     <body>
@@ -146,7 +150,7 @@
             <h3>&lt;nav&gt; - navigation section</h3>
             <p> the nav tag is used to define a section of navigation links. </p>
             <nav>
-                <a href="http://localhost:3000/pagina2">check out page 2 of this website!</a> <br>
+                <a href="http://localhost:3000/css_cheat_sheet">check out page 2 of this website!</a> <br>
                 <a href="https://www.youtube.com/watch?v=mpYdDJd-mSY">or click this link that takes you to a totally normal youtube video!</a> <br>
                 <a href="https://github.com/cyb3rn3t">or check out my github while you're here :)</a>
                 <br><br>
@@ -234,6 +238,10 @@
                 <li>roll</li>
             </ol>
         </div>
-        <hr>
+        <hr> <br>
+        <div id="centered-link">
+        <a href="css_cheat_sheet"> let's go over a css cheat sheet! </a>
+        </div>
+        <br>
     </body>
 </html>
