--- a/desarrollo-web/tareas/html_cheat_sheet/public/html/html_cheat_sheet.html
+++ b/desarrollo-web/tareas/html_cheat_sheet/public/html/html_cheat_sheet.html
@@ -19,7 +19,7 @@
         <h1>html cheat sheet</h1>
         <h2>html tags</h5>
         
-        <div">
+        <div>
             <h3>&lt;a href="{webpage link}"&gt;&lt;/a&gt; - hyperlinks</h3>
             <p> anchor tags are used to create a hyperlink on a website, either to an external page or to a page within the server its running on (like this one!) </p>
             <p> <a href="https://www.google.com">this is a hyperlink to google, for example</a> </p>
