--- a/desarrollo-web/tareas/simple_web_page/public/html/simple_web_page.html
+++ b/desarrollo-web/tareas/simple_web_page/public/html/simple_web_page.html
@@ -3,43 +3,47 @@
 <head>
     <title>Simple Web Page</title>
     <link rel="stylesheet" href="../styles/styles.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <p class="p">Simple web page</p>
-            </nav>
-            <nav>
-                <a href="#Content">Content</a>
-                <a href="#About">About</a>
-                <a href="#Contact">Contact Us</a>
-        </header>
-        <div id="main">
-            <h2>Web Development Course!</h2>
-            <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepturi sit ab cum aperiam, eveniet iste commodi earum veniam tenetur ipsa?</p>
-            <div id="newsletter">
+</head>
+<body>
+    <header>
+        <nav>
+            <p class="p">Simple web page</p>
+        </nav>
+        <nav>
+            <a href="#Content">Content</a>
+            <a href="#About">About</a>
+            <a href="#Contact">Contact Us</a>
+        </nav>
+    </header>
+    <div id="main">
+        <h2>Web Development Course!</h2>
+        <p class="main-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Excepturi sit ab cum aperiam, eveniet iste commodi earum veniam tenetur ipsa?</p>
+        <div id="newsletter">
             <div>
                 <p>Subscribe to the newsletter</p>
             </div>
             <div>
-                <input type="text" placeholder="Your email">
-                <button>Subscribe</button>
+                <input type="text" placeholder="Enter your email">
+                <button>SUBSCRIBE</button>
             </div>
         </div>
         <div id="images">
             <div>
-                <img src="../images/html.png" alt="HTML logo">
+                <img src="../images/html.png" alt="HTML logo" class="html-img">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Reiciendis, dolor.</p>
             </div>
             <div>
                 <img src="../images/css.png" alt="CSS logo">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Reiciendis, dolor.</p>
             </div>
             <div>
                 <img src="../images/jz.png" alt="JavaScript logo">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Reiciendis, dolor.</p>
             </div>
         </div>
-
         <div id="footer">
             <p>TC2005B Copyright &#64; 2021</p>
+        </div>
     </div>
 </body>
 </html>
